change header & footer on all pages

--- a/ecology.html
+++ b/ecology.html
@@ -70,7 +70,7 @@
                                 <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
                                     aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
+                                    <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
@@ -147,7 +147,8 @@
                             <div data-spy="scroll" data-target="#navbar-ecology" data-offset="0">
                                 <section class="section-policy">                                   
                                             <h2 id="item-1">ЭКОЛОГИЧЕСКАЯ ПОЛИТИКА ПАО «Укртатнафта»</h2>
-                                            <img src="img/ecology-head2.JPG" alt="Экология">
+                                            <!-- TODO:   переделать img в picture -->
+                                            <img src="img/ecology-head2.JPG" alt="Экология">  
                                             <h3 id="item-1-1">Наш девиз: <span>от экологии производства ─ к экологии топлив.</span></h3>
                                             <h3 id="item-1-2">Основная цель: <span>модернизация и развитие современных систем нефтепереработки, снижение выбросов в окружающую среду, утилизация отходов производства.</span></h3>
                                             <h3 id="item-1-3">Основные принципы:</h3>
@@ -174,10 +175,11 @@
                                             <h3>ПАО «Укртатнафта» является крупнейшим в Украине нефтеперерабатывающим комплексом, считает охрану окружающей среды приоритетным направлением своей деятельности.</h3>
                                             <h3>Мониторинг окружающей среды осуществляется по трем направлениям:</h3>
                                             <h2 id="item-2">2. ОХРАНА АТМОСФЕРНОГО ВОЗДУХА</h2>
+                                            <!-- TODO:   переделать img в picture -->
                                             <img src="img/ecology-air-protection2.JPG" alt="Охрана атмосферного воздуха" >
                                             <p>Сокращение вредных выбросов в атмосферу — одно из приоритетных направлений деятельности предприятия в сфере экологии.
                                                 Контроль за состоянием атмосферы в ПАО «Укртатнафта» проводится собственной аттестованной лабораторией: </p>
-                                            <p id="item-2-1"><a href="ecofiles/lab-cert-ua.pdf" class="ecology-link"><i class="demo-icon icon-file-pdf"></i>Свидетельство о соответствии состояния системы измерений" № 015-17 КФ от 08.09.17 г.. Действительно до 07.09.2020 года.</a>     
+                                            <p id="item-2-1"><a href="ecofiles/lab-cert-ua.pdf" class="ecology-link" target="_blank"><i class="demo-icon icon-file-pdf"></i>Свидетельство о соответствии состояния системы измерений" № 015-17 КФ от 08.09.17 г.. Действительно до 07.09.2020 года.</a>     
                                             <p>На предприятии действует многолетняя практика мониторинга загрязнения атмосферного воздуха по установленным эталонным точкам санитарно-защитной зоны (СЗЗ), а также на границе СЗЗ предприятия и в жилой зоне г. Кременчуга.
                                                 Анализ состояния атмосферного воздуха проводится ежемесячно в 6 точках, по 5 ингредиентам, с учетом направления ветра в сторону жилой зоны, точки Т-10 и Т-11 контролируются в один и тот же день последовательно для контроля изменений концентраций загрязняющих веществ по мере удаления от предприятия.</p>
                                             <p><b>Информация содержит:</b></p>
@@ -263,9 +265,9 @@
                                     <p>Потенциально пригодные для дальнейшего использования отходы и некондиционная продукция: средства упаковки, металлолом, отработанные шины, отработанные катализаторы и др.
                                          передаются заготовительным организациям по заключённым договорам как вторичные ресурсы.</p>
                                     <p>Каждый отход на предприятии дифференцирован и учтён. Ежегодно ведутся государственные статистические отчётности по формам № 1- отходы, № 1 — экологические затраты, а на постоянной основе — первичный учёт отходов по типовой форме № 1-ВТ: <br/>
-                                        <a id="item-4-2" class="ecology-link" href="ecofiles/dynamic.doc"><i class="demo-icon icon-file-pdf"></i> Динамика основных показателей в области обращения с отходами.pdf </a></p>
+                                        <a id="item-4-2" class="ecology-link" href="ecofiles/dynamic.doc"><i class="demo-icon icon-file-word"></i> Динамика основных показателей в области обращения с отходами.doc </a></p>
                                     <p>В ПАО «Укртатнафта» внедрена система экологического управления ДСТУ ISO 14001:2006, что подтверждается сертификатом соответствия, выданным ГП «Полтавастандартметрология». <br/>
-                                        <a id="" class="ecology-link" href="ecofiles/cert-iso.pdf"><i class="demo-icon icon-file-pdf"></i> Сертификат.pdf </a>
+                                        <a id="" class="ecology-link" target="_blank" href="ecofiles/cert-iso.pdf"><i class="demo-icon icon-file-pdf"></i> Сертификат.pdf </a>
                                     </p>
                                     <p>Данный сертификат подтверждает высокий уровень системы экологическо-го управления на предприятии. Введённая система направлена
                                          на качественное повышение уровня управления в области охраны окружающей среды и расшире-ние эффективного сотрудничества в этом 
@@ -280,7 +282,84 @@
     </main>
 
     <footer>
-            <p>Create by: miraclus1@gmail.com</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-3">
+                    <ul>
+                        <h2>Контакты</h2>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                    </ul>
+                </div>
+                <div class="col-xl-3">
+                    <ul>
+                        <h2>Полезные ссылки</h2>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                    </ul>
+                    <div class="subscribe">
+                        <h2>Подписки:</h2>
+                        <div class="subscribe-news-wrap">
+                            <label for="subscribe-news">Новости:</label>
+                            <input type="text" id="subscribe-news" placeholder="email">
+                            <button class="subscribe-news-btn">
+                                    <i class="demo-icon icon-paper-plane"></i>
+                            </button>
+                        </div>
+
+                        <div class="subscribe-news-wrap">
+                            <label for="subscribe-news">Публикации:</label>
+                            <input type="text" id="subscribe-news" placeholder="email">
+                            <button class="subscribe-news-btn">
+                                    <i class="demo-icon icon-paper-plane"></i>
+                            </button>
+                        </div>                       
+
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="col-12"><h2>Напишите нам</h2></div>
+                    <form class="form-footer mb-5" action="#" >
+                        <div class="row">                            
+                            <div class="col-6">
+                                <input type="text" name="fio" placeholder="ФИО" class="input-fio">
+                            </div>
+                            <div class="col-6">
+                                <input type="text" name="email" placeholder="email" class="input-fio">
+                            </div>
+                        </div>  
+                        <div class="row">
+                            <div class="col-12">
+                                <label for="forWho">Выберите адресат</label>
+                                <select id="forWho" name="forWho" form="nubexForm" class="contact-form-select">
+                                    <option value="">Общие вопросы</option>
+                                    <option value="">Webmaster</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row">                   
+                            <div class="col-12">
+                                <textarea rows="5" placeholder="Сообщение"  class="contact-us-textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <button type="submit" class="footer-btn-contactUs">Отправить</button>
+                            </div>
+                        </div>
+                    </form>     
+                </div>
+            </div>
+        </div>
+        <p class="mb-0">Create by: miraclus1@gmail.com</p>
     </footer>  
     
     <script src="js/googleMap.js" type="text/javascript"></script>    
