--- a/trade_og.html
+++ b/trade_og.html
@@ -113,7 +113,84 @@
         </section>
     </main>
     <footer>
-            <p>Create by: miraclus1@gmail.com</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-3">
+                    <ul>
+                        <h2>Контакты</h2>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                    </ul>
+                </div>
+                <div class="col-xl-3">
+                    <ul>
+                        <h2>Полезные ссылки</h2>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                    </ul>
+                    <div class="subscribe">
+                        <h2>Подписки:</h2>
+                        <div class="subscribe-news-wrap">
+                            <label for="subscribe-news">Новости:</label>
+                            <input type="text" id="subscribe-news" placeholder="email">
+                            <button class="subscribe-news-btn">
+                                    <i class="demo-icon icon-paper-plane"></i>
+                            </button>
+                        </div>
+
+                        <div class="subscribe-news-wrap">
+                            <label for="subscribe-news">Публикации:</label>
+                            <input type="text" id="subscribe-news" placeholder="email">
+                            <button class="subscribe-news-btn">
+                                    <i class="demo-icon icon-paper-plane"></i>
+                            </button>
+                        </div>                       
+
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="col-12"><h2>Напишите нам</h2></div>
+                    <form class="form-footer mb-5" action="#" >
+                        <div class="row">                            
+                            <div class="col-6">
+                                <input type="text" name="fio" placeholder="ФИО" class="input-fio">
+                            </div>
+                            <div class="col-6">
+                                <input type="text" name="email" placeholder="email" class="input-fio">
+                            </div>
+                        </div>  
+                        <div class="row">
+                            <div class="col-12">
+                                <label for="forWho">Выберите адресат</label>
+                                <select id="forWho" name="forWho" form="nubexForm" class="contact-form-select">
+                                    <option value="">Общие вопросы</option>
+                                    <option value="">Webmaster</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row">                   
+                            <div class="col-12">
+                                <textarea rows="5" placeholder="Сообщение"  class="contact-us-textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <button type="submit" class="footer-btn-contactUs">Отправить</button>
+                            </div>
+                        </div>
+                    </form>     
+                </div>
+            </div>
+        </div>
+        <p class="mb-0">Create by: miraclus1@gmail.com</p>
     </footer>  
     
     
