--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-xl navbar navbar-light bg-white main-menu">
-                <a href="#" class="navbar-brand ">
-                    <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
-                </a>
-                <ul class="lang align-self-center">
-                    <a href="#"><li>UA</li></a>
-                    <a href="#"><li class="lang-active">RU</li></a>
-                    <a href="#"><li>EN</li></a>
-                </ul>
+        <div class="container">
+            <nav class="navbar navbar-expand-xl navbar-light bg-white main-menu">
+                <div class="menu-logo-lang">
+                    <a href="index.html" class="navbar-brand ">
+                        <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
+                    </a>
+                    <ul class="lang align-self-center">
+                        <a href="#"><li>UA</li></a>
+                        <a href="#"><li class="lang-active">RU</li></a>
+                        <a href="#"><li>EN</li></a>
+                    </ul>
+                </div>
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,11 +59,11 @@
                         </li>
                         <li class="nav-item dropdown">
                                 <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
-                                 aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
+                                    aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
-                                    <a class="dropdown-item" href="trade_og.html"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
+                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
                                 </div>
                             </li>
@@ -454,7 +457,7 @@
                 </div>
             </div>
         </div>
-        <p class="mb-0">Create by: miraclus1@gmail.com</p>
+        <p class="mb-0">Create by: miraclus1@gmail.com</p>        
     </footer>
 
 
