--- a/production.html
+++ b/production.html
@@ -17,9 +17,9 @@
     <title>Производство</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-xl navbar navbar-light bg-white">
+    <div class="container">
+        <nav class="navbar navbar-expand-xl navbar-light bg-white main-menu">
+            <div class="menu-logo-lang">
                 <a href="index.html" class="navbar-brand ">
                     <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
                 </a>
@@ -28,56 +28,58 @@
                     <a href="#"><li class="lang-active">RU</li></a>
                     <a href="#"><li>EN</li></a>
                 </ul>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link lol" href="#" id="navbarDropdownMenuLink" 
-                            aria-haspopup="true" aria-expanded="false">Новости<i class="demo-icon icon-down-open-mini"></i>
-                            
-                            </a>  
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">                                
-                                <a class="dropdown-item" href="news.html"><i class="demo-icon icon-id-card"></i> Новости</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-id-card-o"></i> Публикации</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdownMenuLink"  
-                            aria-haspopup="true" aria-expanded="false">О компании<i class="demo-icon icon-down-open-mini"></i></a>
+            </div>
+            
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link lol" href="#" id="navbarDropdownMenuLink" 
+                        aria-haspopup="true" aria-expanded="false">Новости<i class="demo-icon icon-down-open-mini"></i>
+
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">                                
+                            <a class="dropdown-item" href="news.html"><i class="demo-icon icon-id-card"></i> Новости</a>
+                            <a class="dropdown-item" href="#"><i class="demo-icon icon-id-card-o"></i> Публикации</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink"  
+                        aria-haspopup="true" aria-expanded="false">О компании<i class="demo-icon icon-down-open-mini"></i></a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
+                            <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
+                            <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
+                            <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
+                            <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
+                            <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                            <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
+                                aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="production.html"><i class="demo-icon icon-droplet"></i> Производство</a>
-                                <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-envira"></i> Экология</a>
-                                <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
+                                <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
+                                <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
+                                <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
+                                <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
-                                <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
-                                    aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
-                                </div>
-                            </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Сопутствующий бизнес</a>
-                        </li>
-                        <li class="nav-item">
-                                <a class="nav-link" href="#">Наши потребности</a>
-                        </li>
-                        <li class="nav-item">
-                                <a class="nav-link" href="#">Контакты</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Сопутствующий бизнес</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">Наши потребности</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     </header>
     <main>
         <div class="p-head-breadcrumb">
@@ -232,7 +234,84 @@
     </main>
 
     <footer>
-            <p>Create by: miraclus1@gmail.com</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-3">
+                    <ul>
+                        <h2>Контакты</h2>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                        <li>096666666666</li>
+                    </ul>
+                </div>
+                <div class="col-xl-3">
+                    <ul>
+                        <h2>Полезные ссылки</h2>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                    </ul>
+                    <div class="subscribe">
+                        <h2>Подписки:</h2>
+                        <div class="subscribe-news-wrap">
+                            <label for="subscribe-news">Новости:</label>
+                            <input type="text" id="subscribe-news" placeholder="email">
+                            <button class="subscribe-news-btn">
+                                    <i class="demo-icon icon-paper-plane"></i>
+                            </button>
+                        </div>
+
+                        <div class="subscribe-news-wrap">
+                            <label for="subscribe-news">Публикации:</label>
+                            <input type="text" id="subscribe-news" placeholder="email">
+                            <button class="subscribe-news-btn">
+                                    <i class="demo-icon icon-paper-plane"></i>
+                            </button>
+                        </div>                       
+
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="col-12"><h2>Напишите нам</h2></div>
+                    <form class="form-footer mb-5" action="#" >
+                        <div class="row">                            
+                            <div class="col-6">
+                                <input type="text" name="fio" placeholder="ФИО" class="input-fio">
+                            </div>
+                            <div class="col-6">
+                                <input type="text" name="email" placeholder="email" class="input-fio">
+                            </div>
+                        </div>  
+                        <div class="row">
+                            <div class="col-12">
+                                <label for="forWho">Выберите адресат</label>
+                                <select id="forWho" name="forWho" form="nubexForm" class="contact-form-select">
+                                    <option value="">Общие вопросы</option>
+                                    <option value="">Webmaster</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row">                   
+                            <div class="col-12">
+                                <textarea rows="5" placeholder="Сообщение"  class="contact-us-textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <button type="submit" class="footer-btn-contactUs">Отправить</button>
+                            </div>
+                        </div>
+                    </form>     
+                </div>
+            </div>
+        </div>
+        <p class="mb-0">Create by: miraclus1@gmail.com</p>
     </footer>  
         <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
         <script src="js/parallax.min.js"  type="text/javascript"></script>    
