add "about_us" page

--- a/ecology.html
+++ b/ecology.html
@@ -179,15 +179,15 @@
                                             <img src="img/ecology-air-protection2.JPG" alt="Охрана атмосферного воздуха" >
                                             <p>Сокращение вредных выбросов в атмосферу — одно из приоритетных направлений деятельности предприятия в сфере экологии.
                                                 Контроль за состоянием атмосферы в ПАО «Укртатнафта» проводится собственной аттестованной лабораторией: </p>
-                                            <p id="item-2-1"><a href="ecofiles/lab-cert-ua.pdf" class="ecology-link" target="_blank"><i class="demo-icon icon-file-pdf"></i>Свидетельство о соответствии состояния системы измерений" № 015-17 КФ от 08.09.17 г.. Действительно до 07.09.2020 года.</a>     
+                                            <p id="item-2-1"><a href="ecofiles/lab-cert-ua.pdf" class="red-link" target="_blank"><i class="demo-icon icon-file-pdf"></i>Свидетельство о соответствии состояния системы измерений" № 015-17 КФ от 08.09.17 г.. Действительно до 07.09.2020 года.</a>     
                                             <p>На предприятии действует многолетняя практика мониторинга загрязнения атмосферного воздуха по установленным эталонным точкам санитарно-защитной зоны (СЗЗ), а также на границе СЗЗ предприятия и в жилой зоне г. Кременчуга.
                                                 Анализ состояния атмосферного воздуха проводится ежемесячно в 6 точках, по 5 ингредиентам, с учетом направления ветра в сторону жилой зоны, точки Т-10 и Т-11 контролируются в один и тот же день последовательно для контроля изменений концентраций загрязняющих веществ по мере удаления от предприятия.</p>
                                             <p><b>Информация содержит:</b></p>
                                             <ul id="item-2-2">
-                                                <li><a href="ecofiles/air_2016.xls" class="ecology-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2016г.</a></li>
-                                                <li><a href="ecofiles/air_2017.xls" class="ecology-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2017г.</a></li>
-                                                <li><a href="ecofiles/air_2018.xls" class="ecology-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2018г.</a></li>
-                                                <li><a href="ecofiles/air_2019.xls" class="ecology-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2019г.</a></li>
+                                                <li><a href="ecofiles/air_2016.xls" class="red-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2016г.</a></li>
+                                                <li><a href="ecofiles/air_2017.xls" class="red-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2017г.</a></li>
+                                                <li><a href="ecofiles/air_2018.xls" class="red-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2018г.</a></li>
+                                                <li><a href="ecofiles/air_2019.xls" class="red-link"><i class="demo-icon icon-file-excel"></i>Измерения за 2019г.</a></li>
                                             </ul>
                                             <p> Результаты измерений фактических концентраций загрязняющих веществ в атмосферном воздухе по сероводороду, фенолу, ксилолу, толуолу, углеводородам (<a class="map-link" data-toggle="collapse" data-target="#map"><i class="demo-icon icon-map"></i> карта </a>)</p>
                                             <div id="map" class="collapse ">
@@ -201,7 +201,7 @@
                                     <p>ПАО «Укртатнафта» имеет наивысший в отрасли показатель водооборота 99,7–99.8% и является единственным НПЗ, работающим без сброса сточных вод в открытые водоемы. 
                                         Регулярные исследования, проводимые Украинским центром охраны вод по скважинам вокруг пруда-испарителя, подтверждают снижение 
                                         загрязненности подземных вод и соответственно правильность
-                                        <span class="ecology-link"><a data-toggle="collapse" data-target="#protect_woter">прогноза  специалистов по завершению самоочистки подземных горизонтов, в 2003–2007 годах.</a></span>
+                                        <span class="red-link"><a data-toggle="collapse" data-target="#protect_woter">прогноза  специалистов по завершению самоочистки подземных горизонтов, в 2003–2007 годах.</a></span>
                                         <div id="protect_woter" class="collapse ">
                                             <img src="img/result.jpg" alt="Результаты загрязнения воды">
                                         </div>
@@ -229,7 +229,7 @@
                                         </ul>
                                         <p>В результате реализации основных водоохранных мероприятий (1994—2005 гг.) экологическая ситуация в регионе начала постепенно меняться в сторону не только снижения интенсивности загрязнения
                                              подземных вод и локализации ореолов загрязнения, но и восстановления качества подземных вод на значительных площадях, что подтверждается
-                                              результатами исследований, которые приведены в <b><a href="ecofiles/water-table.doc" class="ecology-link" id="item-3-3"><i class="demo-icon icon-file-word"></i>таблице.</a></b></p>
+                                              результатами исследований, которые приведены в <b><a href="ecofiles/water-table.doc" class="red-link" id="item-3-3"><i class="demo-icon icon-file-word"></i>таблице.</a></b></p>
                                         <p>Так же на промплощадке ПАО «Укртатнафта» существует системы инженерной защиты от проникновения нефтепродукта в грунтовые воды за территорию предприятия (более 45 скважин, извлекающих нефтепродукт). Следует отметить экологичность внедренного метода. 
                                             Нефтепродукт извлекается практически чистым, направляется на переработку с содержанием воды менее 1%. Вода также не смешивается с нефтепродуктом, содержание последнего в воде находится на уровне менее 0,1–0,3 мг/л.
                                             На дневную поверхность ни вода, ни нефтепродукты не выливаются. Система работает круглосуточно и круглогодично. Это единственная в своем роде система, внедренная в Украине. Работа системы на постоянной основе 
@@ -246,7 +246,7 @@
                                     <p>Предприятие участвует в реализации государственной политики в сфере обращения с отходами направленной на минимизацию отходов, рациональное использование и экологически безопасное размещение отходов, стремится к максимально возможному использованию отходов в целях снижения воздействия на объекты окружающей среды.
                                             Промышленные и бытовые отходы, образующиеся при переработке нефти и нефтепродуктов, подлежат утилизации или захоронению согласно разработанных на предприятии действующих общезаводских инструкций в области обращения с отходами производства.</p>
                                     <p>Предприятием эксплуатируется специализированный полигон, отвечающий экологическим нормам, для захоронения промышленных отходов III и IV классов опасности, образующиеся в производственных процессах ПАО: отработанные катализаторы, цеолиты, нефтешламы, отходы, содержащие нефтепродукты. <br/>
-                                    (<a id="item-4-1" class="ecology-link" data-toggle="collapse" data-target="#map-pt" id="item-4-2"><i class="demo-icon icon-map"></i>карта</i></a>)</p>
+                                    (<a id="item-4-1" class="red-link" data-toggle="collapse" data-target="#map-pt" id="item-4-2"><i class="demo-icon icon-map"></i>карта</i></a>)</p>
                                         <div id="map-pt" class="collapse">
                                             <div id="google-map-pt" data-latitude="49.169133" data-longitude="33.500563"></div>
                                         </div>        
@@ -255,7 +255,7 @@
                                         С привлечением иностранных инвестиций отработана технология, приобретено оборудование и с июня 1997 года работает полная схема по переработке любых нефтесодержащих отходов.</p>
                                     <p>Потенциально непригодные опасные отходы, такие как отработанные ртутные лампы и аккумуляторные батареи, передаются на утилизацию потребителю согласно заключённых договоров.</p>
                                     <p>В результате хозяйственной деятельности на предприятии образуются бытовые и строительные отходы, которые захороняются на полигоне твёрдых бытовых отходов (ТБО, 
-                                        <a class="ecology-link" class="map-button" data-toggle="collapse" data-target="#map-tbo"><i class="demo-icon icon-map"></i> карта</a>)
+                                        <a class="red-link" class="map-button" data-toggle="collapse" data-target="#map-tbo"><i class="demo-icon icon-map"></i> карта</a>)
                                         <div id="map-tbo" class="collapse">
                                             <div id="google-map-tbo" data-latitude="49.174450" data-longitude="33.489802"></div>
                                         </div>    
@@ -265,9 +265,9 @@
                                     <p>Потенциально пригодные для дальнейшего использования отходы и некондиционная продукция: средства упаковки, металлолом, отработанные шины, отработанные катализаторы и др.
                                          передаются заготовительным организациям по заключённым договорам как вторичные ресурсы.</p>
                                     <p>Каждый отход на предприятии дифференцирован и учтён. Ежегодно ведутся государственные статистические отчётности по формам № 1- отходы, № 1 — экологические затраты, а на постоянной основе — первичный учёт отходов по типовой форме № 1-ВТ: <br/>
-                                        <a id="item-4-2" class="ecology-link" href="ecofiles/dynamic.doc"><i class="demo-icon icon-file-word"></i> Динамика основных показателей в области обращения с отходами.doc </a></p>
+                                        <a id="item-4-2" class="red-link" href="ecofiles/dynamic.doc"><i class="demo-icon icon-file-word"></i> Динамика основных показателей в области обращения с отходами.doc </a></p>
                                     <p>В ПАО «Укртатнафта» внедрена система экологического управления ДСТУ ISO 14001:2006, что подтверждается сертификатом соответствия, выданным ГП «Полтавастандартметрология». <br/>
-                                        <a id="" class="ecology-link" target="_blank" href="ecofiles/cert-iso.pdf"><i class="demo-icon icon-file-pdf"></i> Сертификат.pdf </a>
+                                        <a id="" class="red-link" target="_blank" href="ecofiles/cert-iso.pdf"><i class="demo-icon icon-file-pdf"></i> Сертификат.pdf </a>
                                     </p>
                                     <p>Данный сертификат подтверждает высокий уровень системы экологическо-го управления на предприятии. Введённая система направлена
                                          на качественное повышение уровня управления в области охраны окружающей среды и расшире-ние эффективного сотрудничества в этом 
