--- a/trade_og.html
+++ b/trade_og.html
@@ -14,13 +14,13 @@
     <link href="css/fontello.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Электроэнергия</title>
+    <title>Поставка нефтепродуктов</title>
 </head>
 <body>
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-xl navbar navbar-light bg-white main-menu">
-                <a href="#" class="navbar-brand ">
+                <a href="index.html" class="navbar-brand ">
                     <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
                 </a>
                 <ul class="lang align-self-center">
@@ -84,13 +84,13 @@
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="col">
-                            <h2>Автомобилистам</h2>                            
+                            <h2>Поставка нефтепродуктов</h2>                            
                     </div>
                     <div class="col-auto pull-right">
                         <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Автомобилистам</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Поставка нефтепродуктов</li>
                                 </ol>
                             </nav>
                     </div>                    
@@ -99,14 +99,33 @@
         </div>
 
         <section>
-            <div class="container">
+            <div class="container container-trade_og">
                 <div class="row">
                     <div class="col-12">
                         <h2>Информация по методике формирования планов отгрузки автомобильным транспортом</h2>                        
                         <p>Отгрузка нефтепродуктов автомобильным транспортом осуществляется при наличии Договора на поставку нефтепродуктов, в соответствии с поданными заявками на отгрузку, при наличии предварительной оплаты.</p>
                         <p>Отгрузка нефтепродуктов автомобильным транспортом Продавца с доставкой к месту назначения по регионам Украины.</p>
-                        <p>Додаток ДОГОВІР ПОСТАВКИ НАФТОПРОДУКТІВ: </p>
-                        <p><a href="docs/Trade_og/Договір приєднання 2018.docx"><i class="demo-icon icon-file-word"></i>Договір приєднання.doc</a></p>
+                        <p>Додаток: </p>
+                        <p><a href="docs/Trade_og/Договір приєднання 2018.docx"><i class="demo-icon icon-file-word"></i>ДОГОВІР ПОСТАВКИ НАФТОПРОДУКТІВ.doc</a></p>
+                        <p>Очередность компаний для осуществления отгрузки определяется исходя из очередности поступления предварительной оплаты на расчетный счет ПАО «Укртатнафта» (дата и время зачисления денежных средств на расчетный счет ПАО «Укртатнафта»).</p>
+                        <p>С целью своевременной подготовки счетов на предварительную оплату и для возможности формирования планов отгрузки просим заявки на отгрузку предоставлять заблаговременно:</p>
+                        <ul>
+                            <li>
+                                <span><b>E-mail:</b></span> <br/>
+                                <a href="mailto:zbut@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>zbut@ukrtatnafta.com</a></li>
+                            <li>
+                                <span><b>Fax:</b></span> <br/>
+                                <li><i class="demo-icon icon-fax"></i>(0536) 76-11-83</li>
+                                <li><i class="demo-icon icon-fax"></i>76-11-84</li>
+                            </li>
+                            <li>Время работы факса с 8:00 до 20:00</li>
+                        </ul>
+                        <p><strong>Обращаем Ваше внимание, что формирование планов отгрузки нефтепродуктов происходит автоматически.</strong></p>
+                        <ul>
+                            <h3>Контактные лица при отгрузке:</h3>
+                            <li>Бондарев Максим Владимирович – (0536) 76-80-40</li>
+                            <li>Шевчук Анна Вячеславовна – (0536) 76-81-08</li>
+                        </ul>
                     </div>
                 </div>
             </div>
