--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
                                 <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
+                                <a class="dropdown-item" href="about_us.html"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -63,7 +63,7 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
+                                    <a class="dropdown-item" href="trade_og.html"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
                                 </div>
                             </li>
