rework main page, add page contacts

--- a/ecology.html
+++ b/ecology.html
@@ -92,7 +92,7 @@
     </header>
 
     <main>
-        <!-- <div class="wrap"> -->
+        <div class="wrap-ecology">
             <div class="p-head-breadcrumb">
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
@@ -143,7 +143,7 @@
                             </nav>
                         </nav>
                     </aside>
-                    <div class="col-xl-9 col-lg-9">
+                    <div class="col-xl-9 col-lg-9 right-column-ecology">
                             <div data-spy="scroll" data-target="#navbar-ecology" data-offset="0">
                                 <section class="section-policy">                                   
                                             <h2 id="item-1">ЭКОЛОГИЧЕСКАЯ ПОЛИТИКА ПАО «Укртатнафта»</h2>
@@ -278,7 +278,7 @@
                 </div>
 
             </div>
-            
+        </div>    
     </main>
 
     <footer>
