--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-xl navbar-light bg-white main-menu">
+            <nav class="navbar navbar-expand-xl navbar-light  main-menu">
                 <div class="menu-logo-lang">
                     <a href="index.html" class="navbar-brand ">
                         <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
@@ -74,7 +74,7 @@
                                 <a class="nav-link" href="#">Наши потребности</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="#">Контакты</a>
+                                <a class="nav-link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </div>
@@ -246,7 +246,7 @@
                 </div>
         </section>
         
-        <section class="section-parralax">
+        <!-- <section class="section-parralax">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 parallax-col">
@@ -266,16 +266,12 @@
                                     <i class="demo-icon icon-flight"></i>
                                     <p>Крупнейшим производителем топлива для реактивных двигателей в Украине</p>
                                 </div>
-                                <!-- <div class="col-3">
-                                    <i class="demo-icon icon-droplet"></i>
-                                    <p>Мощность 18,6 млн. тонн в год</p>
-                                </div> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- <section class="section-images">
             <div class="container-fluid">
@@ -339,7 +335,7 @@
             </div>
         </section> -->
 
-        <section class="contact-from-section">
+        <!-- <section class="contact-from-section">
                 <h2 class="news-h2">Напишите нам</h2>
             <div class="container">
                 <div class="row justify-content-center">
@@ -357,27 +353,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- <section class="trash-test">
-            <div class="container">
-                    <div class="row no-gutters">
-                            <div class="col-xl-12 hidden-lg hidden-md hidden-sm hidden-xs green">.col-12 .col-sm-6 .col-md-8</div>
-                            <div class="col-6 col-md-4 red">.col-6 .col-md-4</div>
-                          </div>
-            </div>
-            <div class="container">
-                    <div class="row">
-                            <div class="d-none d-sm-block col-sm-6">
-                                HIDE ME ON SMALL SCREENS.
-                                Show me on larger screens.
-                            </div>
-                            <div class="col-sm-6 col-xs-12">
-                                SHOW ME ON SMALL SCREENS.
-                                Show me on larger screens.
-                            </div>
-                        </div>
-            </div>
-        </section>         -->
+        </section> -->
+
     </main>
     <footer>
         <div class="container-fluid">
