change contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -170,16 +170,25 @@
             </section>
 
             <section class="section-contacts">  
-                <div class="row">
-                    <div class="col-12">
+                <div class="row justify-content-around">
+                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
                         <h5>Справочная служба:</h5>
                         <i class="demo-icon icon-phone"></i>+38(05366) 4-13-60<br>
                         <i class="demo-icon icon-phone"></i>+38(0536) 76-84-09
                     </div>
+                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
+                        <h5>Контактные телефоны отдела реализации:</h5>
+                        <i class="demo-icon icon-phone"></i>(0536) 76-80-40;<br>
+                        <i class="demo-icon icon-phone"></i>76-81-08;<br>
+                        <i class="demo-icon icon-phone"></i>76-81-08;<br>
+                        <i class="demo-icon icon-phone"></i>76-11-62;<br>
+                        <i class="demo-icon icon-phone"></i>76-11-44.
+                    </div>
                 </div>
+                <!-- </div> -->
             </section>
 
-            <section class="section-contacts">  
+            <!-- <section class="section-contacts">  
                 <div class="row">
                     <div class="col-12">
                         <h5>Контактные телефоны отдела реализации:</h5>
@@ -190,31 +199,35 @@
                         <i class="demo-icon icon-phone"></i>76-11-44.
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <section class="section-contacts">  
-                <div class="row">
-                    <div class="col-12">
+                <div class="row justify-content-around">
+                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-green">
                         <h5>Контактные телефоны отдела сырьевого обеспечения:</h5>
                         <i class="demo-icon icon-phone"></i>(0536) 76-11-24;<br>
                         <i class="demo-icon icon-phone"></i>76-14-89;<br>
                         <i class="demo-icon icon-phone"></i>76-14-82.
                     </div>
-                </div>
-            </section>
-
-            <section class="section-contacts">  
-                <div class="row">
-                    <div class="col-12">
+                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-green">
                         <h5>Управление материально-технического обеспечения:</h5>
                         <i class="demo-icon icon-phone"></i>+ 38 (0536) 76-88-79
                     </div>
                 </div>
             </section>
 
-            <section class="section-contacts">  
+            <!-- <section class="section-contacts">  
                 <div class="row">
                     <div class="col-12">
+                        <h5>Управление материально-технического обеспечения:</h5>
+                        <i class="demo-icon icon-phone"></i>+ 38 (0536) 76-88-79
+                    </div>
+                </div>
+            </section> -->
+
+            <section class="section-contacts">  
+                <div class="row justify-content-around">
+                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
                         <h5>Сектор по связям с общественностью ПАО "Укртатнафта":</h5>
                         <ul>
                             <li>
@@ -231,12 +244,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-            </section>
-
-            <section class="section-contacts">  
-                <div class="row">
-                    <div class="col-12">
+                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
                         <h5>Управление кадров и технического обучения(по вопросам трудоустройства и отправки резюме):</h5>
                         <ul>
                             <li>
@@ -253,15 +261,38 @@
                 </div>
             </section>
 
-            <section class="section-contacts">  
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            Схема проезда
-            </a>
-            <div class="collapse" id="collapseExample">
-                <div class="map-road">
-                    <img src="img/map.png" alt="Карта проезда">
+            <!-- <section class="section-contacts">  
+                <div class="row">
+                    <div class="col-12 bg-orange">
+                        <h5>Управление кадров и технического обучения(по вопросам трудоустройства и отправки резюме):</h5>
+                        <ul>
+                            <li>
+                                <span>Телефон:</span><br/>
+                                <i class="demo-icon icon-phone"></i> +38 (0536) 76-84-61<br/>
+                                <i class="demo-icon icon-phone"></i> +38 (0536) 76-10-60
+                            </li>  
+                            <li>
+                                <span>Email:</span>
+                                <a href="mailto:margo@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>margo@ukrtatnafta.com</a>
+                            </li>                         
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </section> -->
+
+            <section class="section-contacts">  
+                <div class="row">
+                    <div class="col align-self-center">
+                        <a class="btn btn-primary contact-map-button" data-toggle="collapse" href="#collapseMap" role="button" >
+                        Схема проезда
+                        </a>
+                        <div class="collapse" id="collapseMap">
+                            <div class="map-road">
+                                <img src="img/map.png" alt="Карта проезда">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
         </div>
